基本完成功能，下一步优化，封装代码

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -19,6 +19,22 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.WeatherActivity"></activity>
+
+        <!--<activity android:name=".activity.BaseActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+
+        <!--</activity>-->
+
+
+        <service android:name=".service.AutoUpdateWeatherService"
+                  android:enabled="true"
+                  android:exported="true"
+            ></service>
+
     </application>
 
 </manifest>
