--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -13,28 +13,46 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+
+    /*配置so使用   不配置的话报错：
+    NetWork location failed because baidu location
+     service can not decrypt the request query, please check  the file
+     */
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
-
-    compile 'org.litepal.android:core:1.5.1'     //数据库 litepal 依赖
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'   //okhttp3
-    compile 'com.github.bumptech.glide:glide:3.7.0'   //图片显示
-    compile 'com.google.code.gson:gson:2.7'       //json数据的解析
-
-    compile 'com.jakewharton:butterknife:7.0.1'   //注解
-
-
+    compile 'org.litepal.android:core:1.5.1'
+    //数据库 litepal 依赖
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    //okhttp3
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //图片显示
+    compile 'com.google.code.gson:gson:2.7'
+    //json数据的解析
+    compile 'com.jakewharton:butterknife:7.0.1'
+    //注解
     //Android Debug Database 是一个用于在Android应用中调试数据库和分享参数的强大的库。
     debugCompile 'com.amitshekhar.android:debug-db:0.2.0'
+    compile files('libs/BaiduLBS_Android.jar')
 }
